<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.InstanceSegmentationFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvTitle"
            android:fontFamily="@font/merriweather_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="18sp"
            android:layout_margin="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivSettings"
            android:layout_margin="32dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_settings"/>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewpager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:layout_marginVertical="16dp"
            android:paddingHorizontal="24dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/tvTitle"
            app:layout_constraintBottom_toTopOf="@id/cvButtons"/>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cvButtons"
            app:strokeColor="@android:color/transparent"
            app:cardBackgroundColor="@color/white"
            app:cardElevation="2dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:padding="16dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/llInterfaceTime"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_marginVertical="4dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:textSize="12sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/pre_process_time"/>

                        <TextView
                            android:textColor="@color/primary"
                            android:layout_marginStart="4dp"
                            android:textSize="12sp"
                            android:id="@+id/tvPreProcess"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="@string/_0ms"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_marginVertical="4dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:textSize="12sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/interface_time"/>

                        <TextView
                            android:textColor="@color/primary"
                            android:layout_marginStart="4dp"
                            android:textSize="12sp"
                            android:id="@+id/tvInterfaceTime"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="@string/_0ms"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_marginVertical="4dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:textSize="12sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/post_process_time"/>

                        <TextView
                            android:textColor="@color/primary"
                            android:layout_marginStart="4dp"
                            android:textSize="12sp"
                            android:id="@+id/tvPostProcess"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="@string/_0ms"/>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="4dp"
                    android:id="@+id/llButtons"
                    android:paddingHorizontal="16dp"
                    android:weightSum="2"
                    app:layout_constraintTop_toBottomOf="@id/llInterfaceTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnCamera"
                        app:icon="@drawable/ic_camera"
                        android:text="@string/camera"
                        style="@style/button_half" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnGallery"
                        app:icon="@drawable/ic_image"
                        android:text="@string/gallery"
                        style="@style/button_half"/>

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

            <ImageView
                android:id="@+id/ivTop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>